<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">CarCare</string>

    <string name="error_weak_password">Weak Password</string>
    <string name="error_invalid_email">Invalid Email Format</string>
    <string name="error_user_exists">User Already exists</string>
    <string name="action_view_type">View Type</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCOCXj2yLM-QJmco0vnPWaILOsNxuUpFWM</string>
    <string name="location_selected">Location selected</string>
    <string name="cancelled">Cancelled</string>
    <string name="required">Required</string>
    <string name="agencies">CarCare Agencies</string>
    <string name="confirm_sign_out">Confirm Sign out?</string>
    <string name="yes">Yes</string>
    <string name="done">Done.!</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="more">More</string>
    <string name="search_result">Search Result</string>
    <string name="delete">Delete </string>
    <string name="no_favorites">No Favorites</string>
    <string name="currency">L.E</string>
    <string name="no_services">No Services yet</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="uploading">Uploading…</string>
    <string name="uploaded">Uploaded</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="new_email">New Email</string>
    <string name="password_to_confirm">Password to confirm</string>
    <string name="continueToUpdate">Continue</string>
    <string name="welcome_please_select_your_account_type">Welcome, Please select your account type</string>
    <string name="personal_use">Personal use</string>
    <string name="or">OR</string>

    <string name="have_a_carcare_agency">Have a carCare Agency</string>
    <string name="click_to_choose_image">Click to Choose Image</string>
    <string name="service_title">Service Title</string>
    <string name="here_is_the_description_of_service">Here is the description of service</string>
    <string name="price_l_e">Price L.E</string>
    <string name="finish">Finish</string>
    <string name="select">mark this</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="search_for_agency">Search for Agency</string>
    <string name="do_search">Do Search</string>
    <string name="agency_name">Agency Name</string>
    <string name="description">Description..</string>
    <string name="address">Address..</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_updates">Confirm Updates</string>
    <string name="change_email">Change Email</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="location_on_map">Location on Map</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="dots">...........</string>
    <string name="price">Price</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="not_match">Password not Match</string>
    <string name="not_email">Not Email</string>
    <string name="select_country">select Country</string>
    <string name="select_province">select Province</string>
    <string name="select_city">select City</string>
    <string name="select_header_image">Select Header image</string>
    <string name="select_avatar_image">Select Avatar image</string>
    <string name="error_occured">An error occurred.!</string>
    <string name="hello_we_are_listening_from_you">Hello, We are Listening from you..</string>
    <string name="send">Send</string>
    <string name="minLenth">Min Text Lenth 10</string>
    <string name="about_app">CarCare is a little app for both car owners and car care agencies. If you have a car you will find many car care agencies to wash, maintain,…etc. It specified by location on map and detailed address. If you are an care agency owner, you can register and create a profile for your agency and make your business bigger.!</string>
    <string name="last_seen_agency">Last Seen Agency</string>
    <string name="agency_header">Agency Header Image</string>
    <string name="background_filter_img">Background_filter_image</string>
    <string name="close_dialog">Close Dialog</string>
    <string name="edit_hint_image">Edit Hint Image</string>
    <string name="header_image_widget">Header Image</string>
    <string name="avatar_image_widget">Avatar Image</string>
    <string name="favorite_action">Favorite Action</string>
    <string name="last_scene_agency">Last Scene Agency</string>
    <string name="added">Added</string>
    <string name="removed">Removed</string>
    <string name="permission_denied">permission denied</string>
    <string name="an_error_occured">An error occurred.!</string>
    <string name="service_added_successfully">Service added Successfully</string>
    <string name="failed">Failed</string>
    <string name="email_updated">Email Updated.!</string>
    <string name="no_agencies">No Agencies with these data.!</string>
    <string name="updated_successfully">Updated Successfully.!</string>
    <string name="thanks">Thanks you, we will response you shortly.!</string>
    <string name="fab_button_menu">Action Open Menu</string>
    <string name="fab_button_call">Action Call Agency</string>
    <string name="fab_button_add_service">Action Add Service</string>

</resources>
