<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:fillViewport="true"
    tools:context=".activity.LoginActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/backgroundFilter"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/background_filter_img" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/xml_round_border"
        android:drawablePadding="10dp"
        android:drawableStart="@android:drawable/ic_dialog_email"
        android:hint="@string/email"
        android:textSize="@dimen/font_size_14"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/et_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="126dp"
        android:background="@drawable/xml_round_border"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/pass"
        android:hint="@string/password"
        android:textSize="@dimen/font_size_14"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:drawableLeft="@drawable/pass"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/xml_round_border_2"
        android:text="@string/get_started"
        android:textSize="@dimen/font_size_14"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/create_account"
        android:textSize="@dimen/font_size_14"
        android:textStyle="bold"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="236dp"
        android:visibility="gone"/>

</RelativeLayout>
</ScrollView>